2009-02-18  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Gettext/GettextTool.cs: Handle general solution
	  files, not just mds.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Gettext.csproj: Exorcise more unwanted local
	  copy.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Gettext.csproj: Flush MD's removal of newline at
	  end of file that was introduced by manually editing with
	  gedit.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Gettext.csproj: Remove invalid ApplicationIcon
	  value that broke the build in VS.

2009-02-06  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/objects.xml: 

	* MonoDevelop.Gettext.Editor/CatalogEditorView.cs: fixed
	  catalog editor view

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Gettext.mdp:
	* MonoDevelop.Gettext.csproj: Migrated to MSBuild file format.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Gettext.addin.xml: Bump MD version.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.Gettext.POEditorWidget.cs:
	* gtk-gui/MonoDevelop.Gettext.GettextFeatureWidget.cs:
	* gtk-gui/MonoDevelop.Gettext.Editor.CatalogHeadersWidget.cs:
	* gtk-gui/MonoDevelop.Gettext.TranslationProjectOptionsDialog.cs:
	*
	  gtk-gui/MonoDevelop.Gettext.Translator.LanguageChooserDialog.cs:
	  Flush.

2009-01-29  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Gettext/Catalog.cs: Rename UserInformation to
	AuthorInformation, and change other strings correspondingly.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Gettext.mdp: Flush project format changes.

2009-01-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Gettext/Catalog.cs:
	* MonoDevelop.Gettext/CatalogParser.cs:
	* MonoDevelop.Gettext/TranslationProject.cs:
	* MonoDevelop.Gettext.Editor/POEditorWidget.cs: